--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* ======= MAIN SETTINGS ========== */
+
 * {
   margin: 0;
   padding: 0;
@@ -6,16 +8,17 @@
 
 :root {
   font-size: 62.5%;
-  --cl-primary: hsl(170, 100%, 26%);
+  --cl-primary: hsl(220, 100%, 26%);
   --cl-secondary: hsl(210, 9%, 31%);
   --headline: hsl(210, 11%, 15%);
   --brand-beige: hsl(39, 100%, 97%);
-  --brand-light: hsla(148, 25%, 89%, 1);
+  --brand-light: hsla(210, 25%, 89%, 1);
   --cl-services: hsla(180, 14%, 97%, 1);
   --cl-about: hsla(39, 100%, 97%, 1);
   --cl-contact: #ffffff;
   --card: hsla(148, 23%, 89%, 1);
   --nav-height: 7.2rem;
+  --hover-primary: hsl(235, 100%, 32%);
 }
 
 html {
@@ -30,7 +33,6 @@ body {
 
 body {
   font-family: 'DM Sans', sans-serif;
-  margin: auto 0;
   text-align: center;
   background: var(--cl-services);
   overflow: overlay;
@@ -45,17 +47,22 @@ section {
 }
 
 .wrapper {
-  width: 37.5rem;
+  width: min(50rem, 100%);
   margin-inline: auto;
   padding-inline: 2.4rem;
 }
 
+img {
+  max-width: 100%;
+}
+
+/* =========== NAVIGATION ============ */
+
 nav {
   display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 1.6rem 2.4rem;
+
   height: var(--nav-height);
+
   position: fixed;
   top: 0;
   z-index: 100;
@@ -76,7 +83,7 @@ nav.scroll .logo svg path {
   fill: #ffffff;
 }
 
-nav.scroll button svg path {
+nav.scroll .open-menu svg path {
   stroke: #ffffff;
 }
 
@@ -85,6 +92,127 @@ nav button {
   border: none;
   cursor: pointer;
 }
+
+nav .logo svg path {
+  fill: var(--cl-primary);
+}
+
+nav .open-menu svg path {
+  stroke: var(--cl-primary);
+}
+
+nav .menu,
+nav .close-menu {
+  position: fixed;
+}
+
+/* ======== MENU EXPANDED ============ */
+
+body.menu-expanded {
+  overflow: hidden;
+  /* O overflow hidden retira o scroll da aplicação */
+}
+
+body.menu-expanded > :not(nav) {
+  /* todos elementos de primeiro nível (>) exceto (:not) */
+  visibility: hidden;
+}
+
+.menu,
+.close-menu,
+body.menu-expanded .open-menu {
+  opacity: 0;
+  visibility: hidden;
+}
+
+body.menu-expanded .menu,
+body.menu-expanded .close-menu {
+  opacity: 1;
+  visibility: visible;
+}
+
+.menu {
+  transform: translateY(100%);
+}
+
+body.menu-expanded .menu {
+  top: 0;
+  left: 0;
+  background: var(--cl-primary);
+  height: 100vh;
+  width: 100vw;
+  padding-top: 7.2rem;
+  transition: transform 300ms;
+  transform: translateY(0);
+}
+
+.menu ul {
+  margin-bottom: 4.8rem;
+}
+
+.menu ul:nth-child(1) {
+  margin-top: 6rem;
+  display: flex;
+  flex-direction: column;
+  gap: 4.8rem;
+  font-size: 2.4rem;
+  line-height: 3.1rem;
+  font-weight: 700;
+}
+
+.menu ul li a {
+  color: var(--brand-beige);
+  text-decoration: none;
+}
+
+.menu .button {
+  font-size: 1.8rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-weight: 700;
+  color: var(--cl-primary);
+  background: #ffffff;
+  padding: 1.6rem 3.2rem;
+  margin: 0 auto;
+  display: inline-block;
+  /* o inline é padrão do elemento a */
+  border-radius: 4rem;
+}
+
+.menu .button:hover {
+  background-color: var(--cl-primary);
+  color: #ffffff;
+  filter: brightness(1.3);
+}
+
+.menu .button:hover {
+  transform: scale(1.05);
+  transition-duration: 0.5s;
+}
+
+.menu .icons {
+  margin-top: 8rem;
+  display: flex;
+  align-items: center;
+  gap: 3.2rem;
+  justify-content: center;
+}
+
+body.menu-expanded .logo,
+body.menu-expanded button {
+  position: relative;
+  z-index: 100;
+}
+
+body.menu-expanded nav .logo path {
+  fill: #ffffff;
+}
+
+body.menu-expanded button path {
+  stroke: #ffffff;
+}
+
+/* ============== HOME SECTION ============== */
 
 #home h4 {
   color: var(--cl-primary);
@@ -102,21 +230,23 @@ nav button {
   font-size: 1.8rem;
   line-height: 2.7rem;
   color: var(--cl-secondary);
-  margin: 3.2rem auto 2.4rem;
+  margin: 3.2rem 0;
 }
 
 #home {
+  padding-block: 0;
   padding-top: calc(4.1rem + var(--nav-height));
 }
 
-#home button,
-main button {
+#home .button,
+#contacts .button {
   margin: 0 auto 6rem;
   background: var(--cl-primary);
   color: hsl(148, 23%, 89%);
   font-size: 1.4rem;
   font-weight: 700;
   text-transform: uppercase;
+  text-decoration: none;
   line-height: 1.8rem;
   display: flex;
   flex-direction: row;
@@ -125,14 +255,18 @@ main button {
   padding: 1.6rem 3.2rem;
   border-radius: 40px;
   border: none;
+  width: fit-content;
 }
 
-button:hover {
+#home .button:hover,
+#contacts .button:hover {
+  background: var(--hover-primary);
   transform: scale(1.05);
   transition-duration: 0.5s;
 }
 
-button:active {
+#home .button:active,
+#contacts .button:active {
   opacity: 0.8;
 }
 
@@ -146,7 +280,7 @@ button:active {
 #home::before {
   content: '';
   width: 100%;
-  height: calc(108rem + var(--nav-height));
+  height: calc(78% + var(--nav-height));
   position: absolute;
   background: var(--brand-light);
   display: block;
@@ -155,8 +289,9 @@ button:active {
   z-index: -1;
 }
 
+/* ============ NUMBERS SECTION ================ */
+
 #numbers {
-  width: 32.7rem;
   margin-inline: auto;
   padding-block: 4rem;
   display: flex;
@@ -178,6 +313,52 @@ button:active {
   font-size: 1.6rem;
   line-height: 2.4rem;
 }
+
+/* =================== SERVICES SECTION ===================== */
+
+#services header h4 {
+  text-transform: uppercase;
+  font-size: 1.4rem;
+  line-height: 150%;
+  letter-spacing: 0.08rem;
+  margin-bottom: 1.6rem;
+  color: var(--cl-primary);
+}
+
+#services header h2 {
+  font-size: 3rem;
+  line-height: 3.9rem;
+  color: var(--headline);
+  margin-bottom: 6rem;
+}
+
+#services .wrapper #cards {
+  display: flex;
+  flex-direction: column;
+  gap: 3.2rem;
+}
+
+#services .card {
+  background: #ffffff;
+  border: 1px solid var(--brand-light);
+  padding: 2.4rem;
+  text-align: left;
+  border-radius: 0.6rem;
+}
+
+#services .card h3 {
+  margin-block: 1.6rem;
+  font-size: 2.3rem;
+  color: var(--headline);
+}
+
+.card p {
+  font-size: 1.6rem;
+  color: var(--cl-secondary);
+  line-height: 150%;
+}
+
+/* ================ ABOUT SECTION =================== */
 
 #about {
   text-align: justify;
@@ -203,12 +384,18 @@ button:active {
   margin-bottom: 6rem;
 }
 
+/* ================ CONTACTS SECTION ================== */
+
 #contacts {
   text-align: justify;
 }
 
 #contacts h2 {
   font-size: 2.4rem;
+  margin-bottom: 3.2rem;
+}
+
+#contacts-settings {
   margin-bottom: 3.2rem;
 }
 
@@ -228,9 +415,7 @@ button:active {
   margin-top: 3.2rem;
 }
 
-#contacts img {
-  margin: 0 0 10rem;
-}
+/* ============== FOOTER =================== */
 
 footer {
   display: flex;
@@ -260,141 +445,280 @@ footer .icons {
   padding-top: 3.2rem;
 }
 
-body.menu-expanded {
-  overflow: hidden;
-  /* O overflow hidden retira o scroll da aplicação */
-}
+/* ================ RETURN BUTTON ================= */
 
-body.menu-expanded > :not(nav) {
-  /* todos elementos de primeiro nível (>) exceto (:not) */
-  visibility: hidden;
-}
+#returnToTop {
+  position: fixed;
+  right: 4rem;
+  bottom: 4rem;
 
-.menu,
-#close-menu,
-body.menu-expanded #open-menu {
   opacity: 0;
   visibility: hidden;
-}
-
-body.menu-expanded .menu,
-body.menu-expanded #close-menu {
-  opacity: 1;
-  visibility: visible;
-}
-
-.menu {
+  transition: 300ms;
   transform: translateY(100%);
 }
 
-body.menu-expanded .menu {
-  position: fixed;
-  top: 0;
-  left: 0;
-  background: var(--cl-primary);
-  height: 100vh;
-  width: 100vw;
-  padding-top: 7.2rem;
-  transition: transform 300ms;
+#returnToTop.show {
+  opacity: 1;
+  visibility: visible;
   transform: translateY(0);
 }
 
-.menu ul {
-  margin-bottom: 4.8rem;
+#returnToTop svg circle {
+  fill: var(--cl-primary);
 }
 
-.menu ul {
-  margin-top: 6rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  gap: 4.8rem;
-  font-size: 2.4rem;
-  font-weight: 700;
-}
+/* ============== MEDIA RULES =============== */
 
-.menu ul a {
-  color: var(--brand-beige);
-  text-decoration: none;
-}
+@media (min-width: 1024px) {
+  /* =============MAIN================ */
 
-.menu .button {
-  font-size: 1.8rem;
-  text-transform: uppercase;
-  text-decoration: none;
-  font-weight: 700;
-  color: var(--cl-primary);
-  background: #ffffff;
-  padding: 1.6rem 3.2rem;
-  margin: 0 auto;
-  display: inline-block;
-  /* o inline é padrão do elemento a */
-  border-radius: 4rem;
-}
+  .wrapper {
+    width: min(112rem, 100%);
+    display: grid;
+  }
 
-.menu .icons {
-  margin-top: 8rem;
-  display: flex;
-  align-items: center;
-  gap: 3.2rem;
-  justify-content: center;
-}
+  section {
+    padding-block: 16rem;
+  }
 
-body.menu-expanded .logo,
-body.menu-expanded button {
-  position: relative;
-  z-index: 100;
-}
+  /* =============NAVIGATION ========= */
+  /* RESET */
+  nav#navigation .wrapper * {
+    margin: 0;
+    padding: 0;
+    visibility: initial;
+    display: initial;
+    opacity: initial;
+    flex-direction: initial;
+    position: initial;
+    transform: initial;
+    background: initial;
+    color: initial;
+  }
 
-body.menu-expanded nav .logo path {
-  fill: #ffffff;
-}
+  nav#navigation .close-menu,
+  nav#navigation .open-menu,
+  nav#navigation .icons {
+    display: none;
+  }
 
-body.menu-expanded button path {
-  stroke: #ffffff;
-}
+  nav#navigation .menu {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 67%;
+  }
 
-#services header h4 {
-  text-transform: uppercase;
-  font-size: 1.4rem;
-  line-height: 150%;
-  letter-spacing: 0.08rem;
-  margin-bottom: 1.6rem;
-  color: var(--cl-primary);
-}
+  nav#navigation .menu ul {
+    display: flex;
+    gap: 3.2rem;
+  }
 
-#services header h2 {
-  font-size: 3rem;
-  line-height: 3.9rem;
-  color: var(--headline);
-  margin-bottom: 6rem;
-}
+  nav#navigation .menu ul li a {
+    font-size: 1.6rem;
+    opacity: 0.7;
+    color: var(--cl-primary);
+    font-weight: 400;
+    transition: opacity 400ms;
+  }
+  nav#navigation .menu a.button {
+    display: flex;
+    justify-content: center;
+    padding: 1rem 2.4rem;
+    border: 1px solid var(--cl-primary);
+    color: var(--cl-primary);
+    line-height: 1.8rem;
+    font-size: 1.4rem;
+    font-weight: 700;
+  }
 
-#services #cards {
-  display: flex;
-  flex-direction: column;
-  gap: 3.2rem;
-}
+  nav#navigation .menu a.button:hover {
+    background-color: var(--cl-primary);
+    color: var(--brand-light);
+    transform: scale(1.05);
+    border: none;
+  }
 
-#services .card {
-  background: #ffffff;
-  border: 1px solid var(--brand-light);
-  padding: 2.4rem;
-  display: flex;
-  flex-direction: column;
-  gap: 1.6rem;
-  text-align: left;
-  border-radius: 0.6rem;
-}
+  nav#navigation.scroll .menu a.button:hover {
+    background-color: var(--brand-light);
+    color: var(--cl-primary);
+  }
 
-.card h3 {
-  font-size: 2.4rem;
-  color: var(--headline);
-}
+  nav#navigation.scroll .menu ul li a {
+    color: var(--brand-light);
+    opacity: 0.6;
+  }
 
-.card p {
-  font-size: 1.6rem;
-  color: var(--headline);
-  line-height: 150%;
+  nav#navigation.scroll .menu a.button {
+    color: #ffffff;
+    border-color: #ffffff;
+  }
+
+  nav#navigation .menu ul li a:hover {
+    opacity: 1;
+    font-weight: 700;
+  }
+
+  nav#navigation .menu ul li a::after,
+  nav#navigation .menu ul li a.active::after {
+    content: '';
+    width: 0%;
+    height: 2px;
+    background-color: var(--cl-primary);
+    display: block;
+    position: relative;
+    bottom: -1.7rem;
+    left: -1rem;
+    transition: width 200ms;
+  }
+
+  nav#navigation.scroll .menu ul li a::after,
+  nav#navigation.scroll .menu ul li a.active::after {
+    background-color: #ffffff;
+  }
+
+  nav#navigation .menu ul li a:hover::after,
+  nav#navigation .menu ul li a.active::after {
+    padding-inline: 1rem;
+    width: 100%;
+  }
+
+  /* =============== HOME ================ */
+
+  #home {
+    padding-top: var(--nav-height);
+  }
+
+  #home .wrapper {
+    grid-template-columns: 60.5rem 1fr;
+    grid-template-areas:
+      'A B'
+      'C C';
+  }
+
+  #home .col-a {
+    grid-area: A;
+    text-align: left;
+    align-items: center;
+    align-self: center;
+  }
+
+  #home .col-b {
+    grid-area: B;
+    width: 100%;
+  }
+
+  #home #numbers {
+    grid-area: C;
+    flex-direction: row;
+    padding: 6rem;
+    width: 100%;
+    gap: 0;
+  }
+
+  #home .button {
+    margin: 0;
+  }
+
+  #home h1 {
+    font-size: 5.2rem;
+  }
+
+  #home .content p {
+    font-size: 1.8rem;
+  }
+
+  #home #numbers .number-settings {
+    flex: 1;
+  }
+
+  #home #numbers .number-settings + .number-settings {
+    border-left: 1px solid var(--cl-primary);
+  }
+
+  #home::before {
+    height: calc(100% - var(--nav-height));
+  }
+
+  /* =========== SERVICES =============== */
+
+  #services {
+    align-items: center;
+  }
+
+  #services header h2 {
+    font-size: 4rem;
+    line-height: 5.2rem;
+    max-width: 49.7rem;
+    margin-inline: auto;
+  }
+
+  #services .wrapper #cards {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 4rem;
+  }
+
+  #services .card {
+    width: 30%;
+    flex-grow: 1;
+  }
+
+  /* ============= ABOUT ================ */
+  #about .wrapper {
+    display: grid;
+    grid-template-areas: 'B A';
+    gap: 6.7rem;
+  }
+
+  #about h2 {
+    font-size: 4rem;
+  }
+
+  #about p {
+    margin: 0;
+  }
+
+  #about .content {
+    align-self: center;
+    grid-area: A;
+  }
+
+  #about img {
+    max-width: 48rem;
+    grid-area: B;
+  }
+
+  /* ============== CONTACT ================= */
+  #contacts .wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  #contacts h2 {
+    font-size: 4rem;
+    width: 40.4rem;
+    text-align: left;
+  }
+
+  #contacts .col-a {
+    align-self: center;
+    align-items: left;
+  }
+
+  #contacts .button {
+    margin: 0;
+  }
+
+  /* ============FOOTER============== */
+  footer .wrapper {
+    display: grid;
+    grid-template-columns: 5fr 1fr;
+    justify-content: space-between;
+  }
+
+  footer .col-a {
+    align-self: center;
+  }
 }
